<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorMainContrastDark"
    tools:context=".activity.MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/create_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <ImageButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:backgroundTint="@color/colorMainContrastDark"
                android:src="@drawable/ic_save_white_24dp"/>


            <LinearLayout
                android:layout_below="@id/save_button"
                android:id="@+id/date_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_date_range_white_24dp" />

                <Button
                    android:id="@+id/datePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/intro_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="16dp"
                    android:background="@android:color/transparent"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_container"
                android:layout_below="@id/date_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_container"
                android:layout_below="@id/title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="4" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/add_location_container"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_container"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_add_location_white_24dp" />

                <Button
                    android:id="@+id/add_location_button"
                    android:layout_width="wrap_content"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorMainContrastDark"
                    android:text="Select Location"/>

                <TextView
                    android:id="@+id/location_text"
                    android:textColor="@android:color/white"
                    android:text="@string/no_location_selected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:id="@+id/location_progress"
                    android:layout_width="20dp"
                    android:visibility="gone"
                    android:layout_height="20dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/add_photo_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_location_container"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_photo_camera_white_24dp" />

                <Button
                    android:id="@+id/add_photo_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorMainContrastDark"
                    android:textColor="@android:color/white"
                    android:text="Take Photo"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/image"
                android:layout_below="@id/add_photo_container"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="500dp" />

            <RelativeLayout
                android:id="@+id/measure_container"
                android:layout_below="@id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/height_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/height_input"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content"
                        android:hint="@string/height" />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_below="@id/height_container"
                    android:id="@+id/weight_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/weight_input"
                        android:layout_width="match_parent"
                        android:inputType="numberDecimal"
                        android:layout_height="wrap_content"
                        android:hint="@string/weight" />

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vaccine_container"
                android:layout_below="@id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/vaccine_name_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/vaccine_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/vaccine_name" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
